--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" media="print" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -31,6 +32,13 @@
     <!-- Custom CSS -->
     <link href="css/stylish-portfolio.min.css" rel="stylesheet">
     <link href="vendor/bootstrap4-toggle/switch.css" rel="stylesheet">
+    <style>
+        @media print{    
+          .no-print, .no-print *{
+            display: none !important;
+          }
+        }
+    </style>
 
     <!-- Catalog: get data from Google Spreadsheets -->
     <script src="https://spreadsheets.google.com/feeds/cells/1riiMiV0HPUPQ1Xe8FLAz0fkAlKglZJnh2bj0E7DyDZ8/2/public/values?alt=json-in-script&callback=doData"></script>
@@ -38,10 +46,10 @@
 
   <body id="page-top">
     <!-- Navigation -->
-    <a class="menu-toggle rounded" href="#">
+    <a class="menu-toggle rounded no-print" href="#">
       <i class="fa fa-bars"></i>
     </a>
-    <nav id="sidebar-wrapper">
+    <nav id="sidebar-wrapper" class="no-print">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
           <a class="js-scroll-trigger" href="#page-top">TestDCat</a>
@@ -62,7 +70,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead d-flex">
+    <header class="masthead d-flex no-print">
       <div class="container text-center my-auto">
         <h1 class="mb-1">TestDCat</h1>
         <h3 class="mb-5">
@@ -75,7 +83,7 @@
     </header>
 
     <!-- Visão Geral -->
-    <section class="content-section bg-light" id="about">
+    <section class="content-section bg-light no-print" id="about">
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
@@ -89,7 +97,7 @@
     </section>
 
     <!-- Catalog -->
-	  <section class="content-section bg-primary text-white text-center" id="catalog">
+	  <section class="content-section bg-primary text-white text-center no-print" id="catalog">
       <div class="container">
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0"></h3>
@@ -107,7 +115,7 @@
     <!-- Mapa -->
     <section class="content-section" id="map" style="width:auto;">
       <div class="container text-center" style="min-width: 1600px;">
-        <div class="row">
+        <div class="row no-print">
           <div class="col-lg-12 mx-auto">
             <div class="content-section-heading">
                 <h2>TestDCat</h2>
@@ -171,7 +179,7 @@
             </div>
         </div>
         <div id="rdiv" style="display: none;">
-          <hr style="margin: 60px;"/>
+          <hr style="margin: 60px;" class="no-print"/>
           <div class="row">
             <div class="col-lg-12 mx-auto">
                 <h2>Your Action Plan</h2>
@@ -181,7 +189,7 @@
           </div>
           <div class="row">
             <div class="col-lg-12 mx-auto text-right">
-              <button type="button" class="btn btn-primary">Compare these Actions</button>
+              <button type="button" class="btn btn-primary" onclick="window.print();">Print as PDF</button>
             </div>
           </div>
         </div>
@@ -189,7 +197,7 @@
     </section>
     
     <!-- Footer--> 
-    <footer class="footer text-center">
+    <footer class="footer text-center no-print">
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
@@ -208,7 +216,7 @@
     </footer>
 
     <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
+    <a class="scroll-to-top rounded js-scroll-trigger no-print" href="#page-top">
       <i class="fa fa-angle-up"></i>
     </a>
 
