--- a/index.html
+++ b/index.html
@@ -37,6 +37,36 @@
           .no-print, .no-print *{
             display: none !important;
           }
+          .col-tdcat-table{
+            flex: 0 0 12% !important;
+            max-width: 12% !important;
+          }
+        }
+
+        .col-tdcat-table{
+          flex: 0 0 12% !important;
+          max-width: 12% !important;
+        }
+
+        .loader {
+          border: 12px solid #f3f3f3;
+          border-radius: 50%;
+          border-top: 12px solid #3498db;
+          width: 50px;
+          height: 50px;
+          -webkit-animation: spin 2s linear infinite; /* Safari */
+          animation: spin 2s linear infinite;
+        }
+
+        /* Safari */
+        @-webkit-keyframes spin {
+          0% { -webkit-transform: rotate(0deg); }
+          100% { -webkit-transform: rotate(360deg); }
+        }
+
+        @keyframes spin {
+          0% { transform: rotate(0deg); }
+          100% { transform: rotate(360deg); }
         }
     </style>
 
@@ -84,6 +114,9 @@
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#map">TestDCat</a>
         </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#improvements">Improvements</a>
+        </li>
       </ul>
     </nav>
 
@@ -106,10 +139,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>About TestDCat</h2>
-            <p class="lead mb-5">The TestDCat catalog is formed by test debt subtypes and, for each of them, a set of TD management activities is associated. 
-              Within each of these activities, there is information about "Approaches" and "Points of attention in the test process". This catalog was populated 
-              based on semi-structured interviews conducted with practitioners who perform test activities in eight projects from industry. With our catalog, we 
-              intend to help the management of test debts during the execution of software testing processes.</p>
+            <p class="lead mb-5">The TestDCat catalog consists of TD management activities and, for each of them, 
+              a set of subtypes of test debts are associated. Within each of these subtypes, actions are presented 
+              using the 5W1H (Who, What, When, Where, Why, and How) model. These actions can be added to a custom 
+              action plan. TestDCat was developed based on semi-structured interviews conducted with professionals 
+              who perform testing activities on eight industry projects. With our catalog, we intend to assist 
+              professionals and researchers in managing test debts during the execution of software testing activities.</p>
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#catalog">Catalog</a>
           </div>
         </div>
@@ -127,7 +162,7 @@
             <img src="img/how_to_use.jpg" alt="some text" width="auto" height="auto">
           </p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" style="width: 250px;margin-right: 10px;" href="#map">Show TestDCat</a>	
-          <a class="btn btn-light btn-xl js-scroll-trigger" style="width: 250px;" href="https://forms.gle/rBULD4bWZ9H8eYybA" target="_blank">Propose Improvements</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" style="width: 250px;" href="#improvements">Propose Improvements</a>
         </div>
       </div>
     </section>
@@ -138,7 +173,18 @@
         <div class="row no-print">
           <div class="col-lg-12 mx-auto">
             <div class="content-section-heading">
-                <h2>TestDCat</h2>
+                <div class="row">
+                  <div  class="col-lg-2"></div>
+                  <div  class="col-lg-8">
+                      <h2>TestDCat</h2>
+                  </div>
+                  <div  class="col-lg-1" style="padding-left: 5%;padding-top: 8px;"><div id="loader" class="loader" style="display: none"></div></div>
+                  <div  class="col-lg-1">
+                      <button type="button" class="btn btn-light no-print" onclick="changeLanguage();">
+                          <img id="flagBTN" src="img/united-states.svg" width="50px" height="50px"/>
+                      </button>
+                  </div>
+                </div>
                 <h3 class="mb-5">Catalog of Test Debt Subtypes and Management Activities</h3>
             </div>
             <div id="dynamicCatalog" style="width:auto;height:auto;" class="text-left"></div>
@@ -161,6 +207,21 @@
         </div>
       </div>
     </section>
+
+    <!-- Catalog -->
+	  <section class="content-section bg-primary text-white text-center no-print" id="improvements">
+        <div class="container">
+          <div class="content-section-heading">
+            <h2 class="mb-5" style="margin-bottom: 10px !important;">Propose Improvements</h2>
+            <p class="lead mb-5 text-center" style="text-justify: inter-word;" >
+                Using this form, you can propose improvements to this catalog. The proposed new actions will be reviewed by a technical 
+                team before their inclusion. You can reply here or, if you prefer, you can go to the form page by clicking on the button below. 
+              <br/><br/>
+            </p>
+            <a class="btn btn-light btn-xl js-scroll-trigger" style="width: 250px;" href="https://forms.gle/rBULD4bWZ9H8eYybA" target="_blank">Propose Improvements</a>
+          </div>
+        </div>
+      </section>
     
     <!-- Footer--> 
     <footer class="footer text-center no-print">
