Correção na exibição das bandeiras e no texto da seção Improvements

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   <div  class="col-lg-1" style="padding-left: 5%;padding-top: 8px;"><div id="loader" class="loader" style="display: none"></div></div>
                   <div  class="col-lg-1">
                       <button type="button" class="btn btn-light no-print" onclick="changeLanguage();">
-                          <img id="flagBTN" src="img/united-states.svg" width="50px" height="50px"/>
+                          <img id="flagBTN" src="img/brazil.svg" width="50px" height="50px"/>
                       </button>
                   </div>
                 </div>
@@ -214,8 +214,8 @@
           <div class="content-section-heading">
             <h2 class="mb-5" style="margin-bottom: 10px !important;">Propose Improvements</h2>
             <p class="lead mb-5 text-center" style="text-justify: inter-word;" >
-                Using this form, you can propose improvements to this catalog. The proposed new actions will be reviewed by a technical 
-                team before their inclusion. You can reply here or, if you prefer, you can go to the form page by clicking on the button below. 
+                You can propose improvements to this catalog. The proposed new actions will be reviewed by a technical 
+                team before their inclusion. Submit your suggestion by clicking on the button below. 
               <br/><br/>
             </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" style="width: 250px;" href="https://forms.gle/rBULD4bWZ9H8eYybA" target="_blank">Propose Improvements</a>
