--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		      <p class="lead mb-5 text-center" style="text-justify: inter-word;" >
             TestDCat follows a mind map structure. The figure below shows an example of how to use the catalog to help in the test debt management. 
             <br/><br/>
-            <img src="img/how_to_use.jpg" alt="some text" width="auto" height="auto">
+            <img src="img/HowTo.jpg" alt="some text" width="auto" height="auto">
           </p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" style="width: 250px;margin-right: 10px;" href="#map">Show TestDCat</a>	
           <a class="btn btn-light btn-xl js-scroll-trigger" style="width: 250px;" href="#improvements">Propose Improvements</a>
