Ajustes na imagem HowTo

--- a/index.html
+++ b/index.html
@@ -145,22 +145,22 @@
               action plan. TestDCat was developed based on semi-structured interviews conducted with professionals 
               who perform testing activities on eight industry projects. With our catalog, we intend to assist 
               professionals and researchers in managing test debts during the execution of software testing activities.</p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#catalog">Catalog</a>
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#catalog">How to Use</a>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Catalog -->
-	  <section class="content-section bg-primary text-white text-center no-print" id="catalog">
-      <div class="container">
+	  <section class="content-section bg-primary text-white text-center no-print" id="catalog" style="padding-top: 4rem; padding-bottom: 4rem;">
+      <div class="container" style="min-width: 1600px;">
         <div class="content-section-heading">
           <h2 class="mb-5" style="margin-bottom: 10px !important;">How to use the TestDCat</h2>
-		      <p class="lead mb-5 text-center" style="text-justify: inter-word;" >
-            TestDCat follows a mind map structure. The figure below shows an example of how to use the catalog to help in the test debt management. 
-            <br/><br/>
-            <img src="img/HowTo.jpg" alt="some text" width="auto" height="auto">
+		      <p class="lead mb-5 text-center" style="text-justify: inter-word; margin-bottom: 2rem!important;" >
+            The figure below shows an example of how to use the catalog to help in the test debt management.<br/><br/>
+            <img src="img/HowTo.svg" alt="some text" width="auto" height="auto"/>
           </p>
+          
           <a class="btn btn-dark btn-xl js-scroll-trigger" style="width: 250px;margin-right: 10px;" href="#map">Show TestDCat</a>	
           <a class="btn btn-light btn-xl js-scroll-trigger" style="width: 250px;" href="#improvements">Propose Improvements</a>
         </div>
